# relationship_lifelog_agent

./: .gitignore  AGENTS.md  README.md  config.example.yaml  pyproject.toml
docs/: ADAPTER_CONTRACT.md  REAL_DATA_OPERATION_GUIDE.md  UPSTREAM_INTEGRATION_REPORT.md  application_overview.html  private_full_agent_plan.md
eval/: __init__.py  full_context_eval_cases.yaml  private_eval_cases.yaml  run_eval.py  run_full_context_eval.py  safety_eval_cases.yaml
src/relationship_lifelog_agent/: __init__.py  app.py  cli.py  config.py  doctor.py  profiles.py  upstream_identities.py  upstream_inspect.py  upstream_smoke.py
src/relationship_lifelog_agent/adapters/: __init__.py  mock.py  notes_lifelog.py  personal_lifelog.py  types.py  upstream_sqlite.py
src/relationship_lifelog_agent/agent/: __init__.py  agent_runtime.py  answer_composer.py  answerability.py  conversation_state.py  (+15 more)
tests/: test_adapters.py  test_agent.py  test_agent_runtime.py  test_answer_safety.py  test_compound_media_question.py  test_conversation_agent.py  test_db_backup.py  test_doctor.py  test_dry_run.py  test_eval.py  test_evidence_quality.py  test_full_answer_verifier.py  test_full_context_eval.py  test_full_context_planning.py  test_full_context_prompt_packer.py  test_full_range_analyzer.py  test_llm_integration.py  test_mock_qa.py  test_privacy.py  test_private_full_config.py  test_profiles.py  test_review_actions.py  test_router.py  test_schema.py  test_streaming.py  test_ui.py  test_upstream_identities.py  test_upstream_inspect.py  test_upstream_smoke.py
tools/: find_profile_id_candidates.py
(+47 files in other folders)
