[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relationship-lifelog-agent"
version = "0.1.0"
description = "Local-first relationship evidence review agent using mock adapters."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "gradio>=4.0",
  "PyYAML>=6.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
relationship-lifelog-agent = "relationship_lifelog_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
relationship_lifelog_agent = [
  "db/schema.sql",
  "ui/styles.css",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
